[Add] Grid & Status Gui
- Add grid object
- Add status imgui

--- a/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj
+++ b/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj
@@ -142,15 +142,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GlWindow.cpp" />
     <ClCompile Include="ImGui\imgui_impl_glfw.cpp" />
     <ClCompile Include="ImGui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model\Grid.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="GlWindow.h" />
     <ClInclude Include="ImGui\imgui_impl_glfw.h" />
     <ClInclude Include="ImGui\imgui_impl_opengl3.h" />
     <ClInclude Include="ImGui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="Loader.h" />
+    <ClInclude Include="ModelView.h" />
+    <ClInclude Include="Model\Grid.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shader\black.frag" />
+    <None Include="Shader\black.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
