--- a/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj.filters
+++ b/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj.filters
@@ -109,5 +109,11 @@
     <None Include="Shader\diffuse.frag">
       <Filter>소스 파일\Shader</Filter>
     </None>
+    <None Include="Shader\Phong.vert">
+      <Filter>소스 파일\Shader</Filter>
+    </None>
+    <None Include="Shader\Phong.frag">
+      <Filter>소스 파일\Shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
