--- a/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj
+++ b/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj
@@ -86,7 +86,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Graphics\Tools\glew\include;C:\Graphics\Tools\gl3w\include;C:\Graphics\Tools\glm;C:\Graphics\Tools\imgui\src;C:\Graphics\Tools\assimp\include;C:\Graphics\Tools\glfw\include;C:\Graphics\Tools\SOIL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
@@ -94,7 +94,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Graphics\Tools\glew\lib\Win32;C:\Graphics\Tools\imgui\lib-Win32;C:\Graphics\Tools\glfw\lib\x86;C:\Graphics\Tools\gl3w\lib;C:\Graphics\Tools\SOIL\lib;C:\Graphics\Tools\assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SOIL.lib;ImGUI.lib;gl3w.lib;glew32.lib;assimp-vc130-mt.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SOIL.lib;ImGUI.lib;gl3w.lib;glew32.lib;assimp-vc130-mt.lib;glfw3.lib;opengl32.lib;meshoptimizer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -103,7 +103,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;NOMINMAX;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>C:\Graphics\Tools\glew\include;C:\Graphics\Tools\gl3w\include;C:\Graphics\Tools\glm;C:\Graphics\Tools\imgui\src;C:\Graphics\Tools\assimp\include;C:\Graphics\Tools\glfw\include;C:\Graphics\Tools\SOIL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WholeProgramOptimization>false</WholeProgramOptimization>
@@ -114,7 +114,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Graphics\Tools\glew\lib\Win32;C:\Graphics\Tools\imgui\lib-Win32;C:\Graphics\Tools\glfw\lib\x86;C:\Graphics\Tools\gl3w\lib;C:\Graphics\Tools\SOIL\lib;C:\Graphics\Tools\Assimp\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SOIL.lib;ImGUI.lib;gl3w.lib;glew32.lib;assimp-vc130-mt.lib;glfw3.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>SOIL.lib;ImGUI.lib;gl3w.lib;glew32.lib;assimp-vc130-mt.lib;glfw3.lib;opengl32.lib;meshoptimizer.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -151,9 +151,13 @@
     <ClCompile Include="ImGui\imgui_impl_glfw.cpp" />
     <ClCompile Include="ImGui\imgui_impl_opengl3.cpp" />
     <ClCompile Include="imgui_user_rendering_interface.cpp" />
+    <ClCompile Include="interval.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model.cpp" />
+    <ClCompile Include="Model\AnimatedModel.cpp" />
     <ClCompile Include="Model\Cylinder.cpp" />
     <ClCompile Include="Model\Grid.cpp" />
+    <ClCompile Include="texUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="agenData.h" />
@@ -164,12 +168,20 @@
     <ClInclude Include="ImGui\imgui_impl_opengl3.h" />
     <ClInclude Include="ImGui\imgui_impl_opengl3_loader.h" />
     <ClInclude Include="imgui_user_rendering_interface.h" />
+    <ClInclude Include="interval.h" />
     <ClInclude Include="Loader.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="meshoptimizer.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="ModelView.h" />
+    <ClInclude Include="Model\AnimatedModel.h" />
     <ClInclude Include="Model\Cylinder.h" />
     <ClInclude Include="Model\Grid.h" />
     <ClInclude Include="SiAgent.h" />
     <ClInclude Include="Simulator.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="SystemInfo.h" />
+    <ClInclude Include="texUtils.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\black.frag" />
@@ -178,6 +190,8 @@
     <None Include="Shader\diffuse.vert" />
     <None Include="Shader\Phong.frag" />
     <None Include="Shader\Phong.vert" />
+    <None Include="Shader\model.frag" />
+    <None Include="Shader\model.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
