--- a/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj.filters
+++ b/CrowdSimulationFramework/CrowdSimulationFramework.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="Model\DirCylinder.cpp">
       <Filter>소스 파일\Model</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GlWindow.h">
@@ -140,6 +143,9 @@
     <ClInclude Include="Model\DirCylinder.h">
       <Filter>헤더 파일\Model</Filter>
     </ClInclude>
+    <ClInclude Include="stb_imgae.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shader\black.frag">
@@ -167,6 +173,12 @@
       <Filter>소스 파일\Shader</Filter>
     </None>
     <None Include="Shader\update.comp">
+      <Filter>소스 파일\Shader</Filter>
+    </None>
+    <None Include="Shader\modelTexture.frag">
+      <Filter>소스 파일\Shader</Filter>
+    </None>
+    <None Include="Shader\modelTexture.vert">
       <Filter>소스 파일\Shader</Filter>
     </None>
   </ItemGroup>
